<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grouping</string>
    <string name="action_purchased">Mark As Purchased</string>
    <string name="action_urgent">Mark As Urgent</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>

    <!-- Navdrawer -->

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="navdrawer_item_summary">Mis quedadas</string>
    <string name="navdrawer_item_public">P\u00FAblicas</string>
    <string name="navdrawer_item_invitations">Invitaciones</string>
    <string name="navdrawer_item_settings">Ajustes</string>
    <string name="navdrawer_item_about">Acerca de Grouping</string>
    <string name="navdrawer_item_logout">Cerrar sesi\u00F3n</string>
    <string name="add_button_description">Button to add a item to the App</string>
    <string name="user_icon_description">User icon on a list item</string>
    <string name="user_icon_selected_description">User icon selected on a list item</string>
    <string name="title_crear">Crear</string>

    <!-- Groceries Activity -->

    <string name="urgent_list">Urgent</string>
    <string name="normal_list">Products</string>
    <string name="toast_deleted_item"> items deleted</string>
    <string name="toast_added_urgent"> items marked as urgent</string>
    <string name="toast_deleted_urgent"> items deleted as urgent</string>
    <string name="toast_purchased_item"> items purchased</string>

    <!-- Task Activity -->
    <string name="date_from">From:</string>
    <string name="date_to">To:</string>

    <!-- Roommates Activity -->

    <string name="groceries_title">Groceries</string>
    <string name="tasks_title">Tasks</string>
    <string name="bills_title">Bills</string>

    <!-- New Activity -->

    <string name="new_title_card">What will you create?</string>
    <string name="new_roommate">Roommate</string>
    <string name="new_grocery">Grocery</string>
    <string name="title_activity_prueba_activity">prueba_activity</string>
    <string name="hello_world">Hello world!</string>

</resources>
