<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:background="@drawable/list_item_selector" >
    
    <CheckBox 
        android:id="@+id/user_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    
    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_user"
        android:background="@android:color/transparent"
        android:contentDescription="@string/user_icon_description" />
    
    <ImageView
        android:id="@+id/user_icon_selected"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_selected"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        android:contentDescription="@string/user_icon_selected_description"/>
    
    <TextView 
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/user_icon"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" 
        android:textSize="20sp"
        android:textColor="@color/secondary_text"
        android:singleLine="true"
        android:ellipsize="end" />
	
    <LinearLayout
        android:id="@+id/user_layout_titles"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_toRightOf="@id/user_icon"
        android:layout_below="@id/user_name"
        android:paddingTop="15dp"
	    android:orientation="horizontal" >
        
       	<TextView 
	        android:id="@+id/user_title_groceries"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/groceries_title"
	        style="@style/RoommatesTitleGrid"/>
       	
       	<TextView 
	        android:id="@+id/user_title_tasks"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/tasks_title"
	        style="@style/RoommatesTitleGrid"/>
	
	    <TextView 
	        android:id="@+id/user_title_bills"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/bills_title"
	        style="@style/RoommatesTitleGrid"/>
        
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
        android:layout_toRightOf="@id/user_icon"
        android:layout_below="@id/user_layout_titles"
	    android:orientation="horizontal" >
        
       	<TextView 
	        android:id="@+id/user_subtitle_groceries"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        style="@style/RoommatesSubtitleGrid"/>
       	
       	<TextView 
	        android:id="@+id/user_subtitle_tasks"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        style="@style/RoommatesSubtitleGrid"/>
	
	    <TextView 
	        android:id="@+id/user_subtitle_bills"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        style="@style/RoommatesSubtitleGrid"/>
        
	</LinearLayout>
	
	
    
</RelativeLayout>
